fixed letter spacing in header

--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -200,7 +200,7 @@
   font-weight: 500;
   text-decoration: none !important;
   text-transform: uppercase;
-  letter-spacing: 1px;
+//  letter-spacing: 1px;
 
   &:hover {
     color: $color-primary-link;
